--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "expo": "~49.0.0",
     "react": "18.2.0",
     "react-native": "0.72.0",
-    "react-native-paper": "5.10.3"
+    "react-native-paper": "5.10.3",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-svg-transformer": "^1.0.0"
   }
 }
