--- a/package.json
+++ b/package.json
@@ -7,17 +7,33 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build:web": "expo export:web"
+    "build:web": "expo export:web",
+    "postinstall": "expo-doctor"
   },
   "dependencies": {
-    "expo": "~49.0.0",
+    "expo": "^50.0.0",
     "react": "18.2.0",
-    "react-native": "0.72.0",
-    "react-native-paper": "5.10.3",
-    "react-native-svg": "13.4.0"
+    "react-native": "0.73.0",
+    "react-native-paper": "^5.11.1",
+    "react-native-svg": "^14.0.0",
+    "expo-asset": "~11.0.0",
+    "expo-file-system": "~16.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "react-native-svg-transformer": "^1.0.0"
+    "@babel/core": "^7.23.0",
+    "@babel/plugin-transform-class-properties": "^7.23.0",
+    "@babel/plugin-transform-export-namespace-from": "^7.23.0",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.0",
+    "@babel/plugin-transform-numeric-separator": "^7.23.0",
+    "@babel/plugin-transform-object-rest-spread": "^7.23.0",
+    "@babel/plugin-transform-optional-catch-binding": "^7.23.0",
+    "@babel/plugin-transform-optional-chaining": "^7.23.0",
+    "react-native-svg-transformer": "^1.3.0"
+  },
+  "resolutions": {
+    "uuid": "^9.0.1",
+    "xmldom": "^0.8.0",
+    "glob": "^10.3.0",
+    "rimraf": "^5.0.1"
   }
 }
