--- a/package.json
+++ b/package.json
@@ -7,17 +7,14 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build:web": "expo export:web",
-    "postinstall": "expo-doctor"
+    "build:web": "expo export:web"
   },
   "dependencies": {
     "expo": "^50.0.0",
     "react": "18.2.0",
-    "react-native": "0.73.0",
+    "react-native": "0.73.4",
     "react-native-paper": "^5.11.1",
-    "react-native-svg": "^14.0.0",
-    "expo-asset": "~11.0.0",
-    "expo-file-system": "~16.0.0"
+    "react-native-svg": "^14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
@@ -28,7 +25,8 @@
     "@babel/plugin-transform-object-rest-spread": "^7.23.0",
     "@babel/plugin-transform-optional-catch-binding": "^7.23.0",
     "@babel/plugin-transform-optional-chaining": "^7.23.0",
-    "react-native-svg-transformer": "^1.3.0"
+    "react-native-svg-transformer": "^1.3.0",
+    "expo-cli": "^7.3.2"
   },
   "resolutions": {
     "uuid": "^9.0.1",
