--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "@babel/plugin-transform-object-rest-spread": "^7.23.0",
     "@babel/plugin-transform-optional-catch-binding": "^7.23.0",
     "@babel/plugin-transform-optional-chaining": "^7.23.0",
-    "react-native-svg-transformer": "^1.3.0",
-    "expo-cli": "^7.3.2"
+    "react-native-svg-transformer": "^1.3.0"
   },
   "resolutions": {
     "uuid": "^9.0.1",
