--- a/package.json
+++ b/package.json
@@ -1,36 +1,40 @@
 {
-  "name": "dice-roller-app",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "build:web": "expo export:web"
-  },
+  "name": "diceroller",
+  "homepage": "https://hectorrf16.github.io/diceroller",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "expo": "^50.0.0",
-    "react": "18.2.0",
-    "react-native": "0.73.4",
-    "react-native-paper": "^5.11.1",
-    "react-native-svg": "^14.1.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^3.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "@babel/core": "^7.23.0",
-    "@babel/plugin-transform-class-properties": "^7.23.0",
-    "@babel/plugin-transform-export-namespace-from": "^7.23.0",
-    "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.0",
-    "@babel/plugin-transform-numeric-separator": "^7.23.0",
-    "@babel/plugin-transform-object-rest-spread": "^7.23.0",
-    "@babel/plugin-transform-optional-catch-binding": "^7.23.0",
-    "@babel/plugin-transform-optional-chaining": "^7.23.0",
-    "react-native-svg-transformer": "^1.3.0"
-  },
-  "resolutions": {
-    "uuid": "^9.0.1",
-    "xmldom": "^0.8.0",
-    "glob": "^10.3.0",
-    "rimraf": "^5.0.1"
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
