Adding first build
Signed-off-by: Héctor Rodríguez <hectoor.16@icloud.com>

--- a/app.json
+++ b/app.json
@@ -18,9 +18,10 @@
       }
     },
     "web": {
-      "bundler": "webpack",
+      "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/favicon.png",
+      "entryPoint": "./index.web.tsx"
     },
     "plugins": [
       "expo-router",
