fixing touch screen
Signed-off-by: Héctor Rodríguez <hectoor.16@icloud.com>

--- a/app.json
+++ b/app.json
@@ -21,7 +21,7 @@
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png",
-      "entryPoint": "./index.web.tsx"
+      // "entryPoint": "./index.web.tsx"
     },
     "plugins": [
       "expo-router",
